Reworked logic behind custom colors as it was inherently buggy

--- a/styles.css
+++ b/styles.css
@@ -176,9 +176,13 @@ input[type="color"]::-webkit-color-swatch{
     right: -25px;
     display: inline-block;
   }
-  #custom-color-1{
-    background-color: white;
-  }
+  #custom-color-1, #custom-color-2,
+  #custom-color-3, #custom-color-4,
+  #custom-color-5{
+    background-image: url(images/placeholder.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
   
  
 
